--- a/platformio.ini
+++ b/platformio.ini
@@ -1037,18 +1037,28 @@ build_flags = ${simulator_unix.build_flags} ${simulator_unix.release_flags}
 #
 # Simulator for macOS (MacPorts)
 #
-#  sudo port install gcc10 glew glm libsdl2 freetype
+#  sudo port install gcc10 gdb glew glm libsdl2 freetype
 #  cd /opt/local/bin
 #  sudo rm -f gcc g++ cc
 #  sudo ln gcc-mp-10 gcc ; sudo ln g++-mp-10 g++ ; sudo ln gcc cc
 #  cd -
 #
+# For debugging add to launch.json :
+# { "name": "(ggdb) Launch",
+#   "type": "cppdbg",
+#   "request": "launch",
+#   "program": "${workspaceFolder}/.pio/build/simulator_macos/program",
+#   "miDebuggerPath": "/opt/local/bin/ggdb",
+#   "MIMode": "gdb",
+#   "cwd": "${workspaceFolder}/.pio/build/simulator_macos" },
+#
 [env:simulator_macos]
 platform    = ${env:simulator_unix_release.platform}
 extends     = env:simulator_unix_release
 lib_ignore  = Adafruit NeoPixel
+build_type  = debug
 build_flags = ${env:simulator_unix_release.build_flags}
-  -g -O0 -D_THREAD_SAFE
+  -ggdb -Og -D_THREAD_SAFE
   -I/opt/local/include
   -I/opt/local/include/freetype2
   -L/opt/local/lib
