--- a/platformio.ini
+++ b/platformio.ini
@@ -1047,17 +1047,19 @@ build_flags = ${simulator_unix.build_flags} ${simulator_unix.release_flags}
 # { "name": "(ggdb) Launch",
 #   "type": "cppdbg",
 #   "request": "launch",
-#   "program": "${workspaceFolder}/.pio/build/simulator_macos/program",
+#   "program": "${workspaceFolder}/.pio/build/simulator_macos/MarlinSimulator",
 #   "miDebuggerPath": "/opt/local/bin/ggdb",
 #   "MIMode": "gdb",
 #   "cwd": "${workspaceFolder}/.pio/build/simulator_macos" },
 #
 [env:simulator_macos]
-platform    = ${env:simulator_unix_release.platform}
-extends     = env:simulator_unix_release
-lib_ignore  = Adafruit NeoPixel
-build_type  = debug
-build_flags = ${env:simulator_unix_release.build_flags}
+platform      = ${env:simulator_unix_release.platform}
+extends       = env:simulator_unix_release
+lib_ignore    = Adafruit NeoPixel
+build_type    = debug
+extra_scripts = ${common.extra_scripts}
+  pre:buildroot/share/PlatformIO/scripts/simulator.py
+build_flags   = ${env:simulator_unix_release.build_flags}
   -ggdb -Og -D_THREAD_SAFE
   -I/opt/local/include
   -I/opt/local/include/freetype2
