--- a/platformio.ini
+++ b/platformio.ini
@@ -1502,6 +1502,7 @@ build_flags   = ${env:simulator_unix_debug.build_flags}
   -Wl,-framework,OpenGl
   -Wl,-framework,CoreFoundation
   -lSDL2
+custom_deps_gcc = g++
 
 [env:simulator_macos_release]
 platform      = ${env:simulator_unix_release.platform}
@@ -1514,6 +1515,7 @@ build_flags   = ${env:simulator_unix_release.build_flags}
   -Wl,-framework,OpenGl
   -Wl,-framework,CoreFoundation
   -lSDL2
+custom_deps_gcc = g++
 
 #
 # Simulator for Windows 10
