--- a/platformio.ini
+++ b/platformio.ini
@@ -1752,7 +1752,8 @@ build_unflags   = ${simulator_macos.build_unflags}
 extends     = simulator_common
 platform    = ${simulator_common.platform}
 src_build_flags = ${simulator_common.src_build_flags} -fpermissive
-build_flags = ${simulator_common.build_flags} ${simulator_common.debug_build_flags} -fno-stack-protector -Wl,-subsystem,windows -lmingw32 -lSDL2main -lSDL2 -lopengl32 -lglew32
+build_flags = ${simulator_common.build_flags} ${simulator_common.debug_build_flags} -fno-stack-protector -Wl,-subsystem,windows -lmingw32 -lSDL2main -lSDL2 -lopengl32 -lglew32 -lssp
+build_type = debug
 
 #
 # Just print the dependency tree
