replace glew with glad

--- a/platformio.ini
+++ b/platformio.ini
@@ -1652,9 +1652,9 @@ src_filter      = ${common.default_src_filter} +<src/HAL/NATIVE_REALTIME>
 #
 # Native Simulation
 # Builds with a small subset of available features
-# Required system libraries: SDL2, OpenGL, GLM, GLEW
+# Required system libraries: SDL2, OpenGL, GLM
 #
-# Linux (Mint 20) : gcc 9.3.0: libsdl2-dev[2.0.10], libglew2.1[2.1.0-4], libglm-dev[0.9.9.7]
+# Linux (Mint 20) : gcc 9.3.0: libsdl2-dev[2.0.10], libglm-dev[0.9.9.7]
 #
 # Debugging with gdb in vscode is as easy as adding the launch task as usual, but platformio
 # will randomly remove your task when it recreates its tasks from a template. Add your gdb
@@ -1664,7 +1664,7 @@ src_filter      = ${common.default_src_filter} +<src/HAL/NATIVE_REALTIME>
 [simulator_common]
 platform          = native
 framework         =
-build_flags       = ${common.build_flags} -D__PLAT_NATIVE_SIM__ -DU8G_HAL_LINKS -IMarlin/src/HAL/NATIVE_SIM/lib/imgui/src -IMarlin -IMarlin/src/HAL/NATIVE_SIM/include -IMarlin/src/HAL/NATIVE_SIM/u8g -std=gnu++17
+build_flags       = ${common.build_flags} -D__PLAT_NATIVE_SIM__ -DU8G_HAL_LINKS -IMarlin/src/HAL/NATIVE_SIM/lib/imgui/src -IMarlin/src/HAL/NATIVE_SIM/lib/glad/include -IMarlin -IMarlin/src/HAL/NATIVE_SIM/include -IMarlin/src/HAL/NATIVE_SIM/u8g -std=gnu++17
 src_build_flags   = -Wall -Wno-expansion-to-defined
 #  -Wredundant-decls -Wcast-align -Wmissing-declarations -Wmissing-include-dirs -Wswitch-enum -Wswitch-default -Wextra -Winvalid-pch -Wredundant-decls -Wformat=2 -Wmissing-format-attribute -Wformat-nonliteral -Wodr -Wno-expansion-to-defined
 release_flags     = -g0 -O3 #-flto # -g0 disables the -g in the common flags
@@ -1681,7 +1681,7 @@ extra_scripts = ${common.extra_scripts}
 
 [simulator_unix]
 extends     = simulator_common
-build_flags = ${simulator_common.build_flags} -lpthread -lSDL2 -lGL -lGLEW
+build_flags = ${simulator_common.build_flags} -ldl -lpthread -lSDL2 -lGL
 
 [env:simulator_unix_debug]
 extends    = simulator_unix
@@ -1697,7 +1697,7 @@ build_flags = ${simulator_unix.build_flags} ${simulator_unix.release_flags}
 #
 # Simulator for macOS (MacPorts)
 #
-#  sudo port install gcc10 gdb glew glm libsdl2 freetype
+#  sudo port install gcc10 gdb glm libsdl2 freetype
 #  sudo port install ld64 @3_3 +ld64_xcode
 #  sudo port uninstall ld64 ld64-latest
 #  cd /opt/local/bin
@@ -1746,13 +1746,13 @@ build_unflags   = ${simulator_macos.build_unflags}
 # Simulator for Windows 10
 #
 #  MSYS2 mingw-w64-x86_64 with these packages:
-#  pacman -S --needed base-devel mingw-w64-x86_64-toolchain mingw64/mingw-w64-x86_64-glm mingw64/mingw-w64-x86_64-SDL2 mingw64/mingw-w64-x86_64-glew
+#  pacman -S --needed base-devel mingw-w64-x86_64-toolchain mingw64/mingw-w64-x86_64-glm mingw64/mingw-w64-x86_64-SDL2
 #
 [env:simulator_win]
 extends     = simulator_common
 platform    = ${simulator_common.platform}
 src_build_flags = ${simulator_common.src_build_flags} -fpermissive
-build_flags = ${simulator_common.build_flags} ${simulator_common.debug_build_flags} -fno-stack-protector -Wl,-subsystem,windows -lmingw32 -lSDL2main -lSDL2 -lopengl32 -lglew32 -lssp
+build_flags = ${simulator_common.build_flags} ${simulator_common.debug_build_flags} -fno-stack-protector -Wl,-subsystem,windows -ldl -lmingw32 -lSDL2main -lSDL2 -lopengl32 -lssp
 build_type = debug
 
 #
