Rushed Serial update

--- a/platformio.ini
+++ b/platformio.ini
@@ -1644,7 +1644,7 @@ src_filter    = ${common.default_src_filter} +<src/HAL/TEENSY40_41>
 [env:native_realtime]
 platform        = native
 framework       =
-build_flags     =  ${common.build_flags} -IMarlin/src/HAL/NATIVE_REALTIME/include -std=gnu++17 -ggdb -lrt -lpthread
+build_flags     =  ${common.build_flags} -D__PLAT_NATIVE_SIM__ -IMarlin/src/HAL/NATIVE_REALTIME/include -std=gnu++17 -ggdb -lrt -lpthread
 src_build_flags = -Wall
 lib_ldf_mode    = off
 src_filter      = ${common.default_src_filter} +<src/HAL/NATIVE_REALTIME>
